--- a/index.html
+++ b/index.html
@@ -46,17 +46,18 @@
           </div>
           <div class="about-text fade-up">
             <h2>About Integra Tech Solutions</h2>
-            <p>Founded in Karur, Tamil Nadu with a presence in Bangalore and Chennai, Integra Tech Solutions brings rich experience in video surveillance, access control, structured networking, and IT operations. We specialize in large-scale CCTV deployments, Genetec platform management, and reliable support services for critical infrastructure.</p>
+            <p>Integra Tech Solutions leverages extensive expertise in video surveillance, access control systems, structured networking, and IT operations. We specialize in the design, deployment, and maintenance of large-scale CCTV and access control solutions, delivering reliable support services for mission-critical infrastructure across diverse industries</p>
             <ul class="bullets">
               <li>Extensive experience integrating CCTV, Access Control, and IT Infrastructure into a single management interface</li>
-
+  <li>Large scale deployments</li>
 <li>Proven success with airports, data centers, and enterprise campuses</li>
 
-<li>Vendor-agnostic expertise in HID, Honeywell, ZKTeco, and Matrix systems</li>
+<li>Expertise in multi-vendor security and surveillance solutions</li>
+ <li>Experience across Genetec, Dahua, Hikvision, and other global platforms</li> 
 
 <li>Dedicated team for design, implementation, and lifecycle support</li>
              
-              <li>Large scale deployments</li>
+            
               <li>Services: CCTV, ACS, Networking,Server and Storage Solutions,System Integration & IT infrastructure Management</li>
             </ul>
           </div>
